applications/source-gitlab-2/gitlab-instance-2/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-instance-2
  namespace: source-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-instance-2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitlab-instance-2
    spec:
      containers:
      - name: gitlab
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/sameersbn-gitlab:15.2.2
        ports:
        - name: http
          containerPort: 80
        - name: ssh
          containerPort: 22
        resources:
          requests:
            cpu: 2000m
            memory: 4000Mi
          limits:
            cpu: 4000m
            memory: 6000Mi
        volumeMounts:
        - mountPath: /home/git/data
          name: gitlab-data
        - mountPath: /home/git/gitlab-shell/hooks/
          name: gitlab-hooks-data
      restartPolicy: Always
      volumes:
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-instance-2-data-volume
      - name: gitlab-hooks-data
        persistentVolumeClaim:
          claimName: gitlab-instance-2-hooks-volume

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-instance-2
  namespace: source-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-instance-2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis-instance-2
    spec:
      containers:
      - image: swr.cn-north-4.myhuaweicloud.com/openeuler/public/redis:1.6.2.6
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - name: redis
          containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 5
          timeoutSeconds: 1
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-instance-2-data-volume
