applications/source-gitlab-2/gitlab-instance-2/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "5G"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  name: gitlab-instance-2-ingress
  namespace: source-new
spec:
  tls:
    - hosts:
        - xihe-gitlab2.test.osinfra.cn
      secretName: gitlab-instance-2-tls
  rules:
    - host: xihe-gitlab2.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: gitlab-instance-2-service
              servicePort: 80
            path: /
